[gd_scene load_steps=21 format=3 uid="uid://b438ssjn22xfs"]

[ext_resource type="Shader" path="res://_shaders/custom/custom_frag_actors.gdshader" id="1_7w157"]
[ext_resource type="Script" path="res://_scripts/enemy_pillz.gd" id="1_fsbj1"]
[ext_resource type="PackedScene" uid="uid://b6m5ebh7isok8" path="res://_pfx/default_enemy_die_fx.tscn" id="2_66fd8"]
[ext_resource type="PackedScene" uid="uid://bqey4meim1lok" path="res://_assets/pivot.tscn" id="2_ntddm"]
[ext_resource type="Script" path="res://_scripts/effect/wobble.gd" id="3_s7aba"]
[ext_resource type="PackedScene" uid="uid://dkdkucw2l03dw" path="res://_scenes/enemy_features/enemy_effects.tscn" id="5_s7aba"]
[ext_resource type="Script" path="res://_resources/ui/health_bar_3d.gd" id="6_4ttvg"]
[ext_resource type="PackedScene" uid="uid://dwpsppfskic5x" path="res://_scenes/enemy_features/melee.tscn" id="8_gkdcr"]
[ext_resource type="Shader" uid="uid://cj56yf8aifbws" path="res://_shaders/uji/enemy_health.tres" id="9_qfs1a"]

[sub_resource type="Gradient" id="Gradient_7w157"]
resource_local_to_scene = true
interpolation_mode = 2
offsets = PackedFloat32Array(0.325, 0.428125, 0.60625, 0.616452, 0.638256, 0.656095, 0.682854, 0.689792, 0.725)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.0509804, 1, 1, 1, 0.973393, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0.320313, 1, 0, 1, 0.283333, 1, 1, 1, 1, 0, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_btf0s"]
gradient = SubResource("Gradient_7w157")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_fsbj1"]
offsets = PackedFloat32Array(0.180303, 0.218038, 0.39445)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_66fd8"]
gradient = SubResource("Gradient_fsbj1")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.667)
fill_to = Vector2(1.02, 2.635)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s7aba"]
transparency = 4
blend_mode = 1
shading_mode = 0
diffuse_mode = 3
specular_mode = 2
disable_ambient_light = true
disable_fog = true
albedo_texture = SubResource("GradientTexture2D_btf0s")
detail_enabled = true
detail_mask = SubResource("GradientTexture2D_66fd8")
detail_blend_mode = 2
disable_receive_shadows = true
point_size = 31.5

[sub_resource type="QuadMesh" id="QuadMesh_4ttvg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qfs1a"]
render_priority = 0
shader = ExtResource("1_7w157")
shader_parameter/color_top = Color(0.128876, 0.329507, 0.804688, 1)
shader_parameter/color_bottom = Color(0.726563, 0.726563, 0.726563, 1)
shader_parameter/specular_color = Color(1, 1, 1, 1)
shader_parameter/fresnel_color = Color(0, 0.222656, 0.207001, 1)
shader_parameter/vertex_color_mix = 0.0
shader_parameter/blend_mode = 0
shader_parameter/gradient_rotation_mode = 1
shader_parameter/gradient_offset = 0.0800001
shader_parameter/gradient_smoothness = 0.0
shader_parameter/diffuse_contrast = 0.31
shader_parameter/diffuse_wrap = 0.885
shader_parameter/diffuse_offset = -0.67
shader_parameter/specular_intensity = 0.695
shader_parameter/specular_size = 0.05
shader_parameter/specular_smoothness = 0.628
shader_parameter/specular_offset = 0.55
shader_parameter/fresnel_power = 0.215
shader_parameter/fresnel_intensity = 1.053
shader_parameter/fresnel_contrast = 1.76
shader_parameter/fresnel_offset = -0.504

[sub_resource type="CapsuleMesh" id="CapsuleMesh_s7aba"]
radial_segments = 20
rings = 5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7w157"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r6b7y"]
render_priority = 0
shader = ExtResource("9_qfs1a")
shader_parameter/Color = Color(1, 1, 1, 1)
shader_parameter/Color2 = Color(0.101563, 1, 0, 1)
shader_parameter/Color3 = Color(1, 0, 0, 1)
shader_parameter/FloatParameter = 0.405
shader_parameter/FloatParameter2 = 0.991
shader_parameter/FloatParameter3 = 1.325

[sub_resource type="QuadMesh" id="QuadMesh_cou12"]
size = Vector2(2.5, 2.5)

[node name="Enemy" type="Area3D" groups=["enemies"]]
collision_layer = 2
collision_mask = 245
script = ExtResource("1_fsbj1")
max_health = 200.0
damage = 32.0
death_effect_scene = ExtResource("2_66fd8")

[node name="pivot" parent="." instance=ExtResource("2_ntddm")]
transform = Transform3D(1, -0.000527468, 0.000497165, 0.000527695, 1, -0.000485827, -0.000496924, 0.000486074, 1, 0.000175823, 8.9407e-08, -0.000162025)
visible = false

[node name="radius_vis" type="MeshInstance3D" parent="."]
transform = Transform3D(2, 0, 0, 0, -8.74228e-08, 2, 0, -2, -8.74228e-08, 0, 0.176774, -5.19646e-09)
visible = false
material_override = SubResource("StandardMaterial3D_s7aba")
cast_shadow = 0
gi_mode = 0
mesh = SubResource("QuadMesh_4ttvg")

[node name="WobbleEffect" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.5, 0)
script = ExtResource("3_s7aba")
spring_stiffness = 64.0
spring_damping = 6.29
max_rotation_degrees = 80.0
hit_force = 32.0

[node name="CharacterMesh" type="MeshInstance3D" parent="WobbleEffect"]
process_physics_priority = 1
transform = Transform3D(1, -0.000834305, -0.000164741, 0.000834375, 1, 0.000450322, 0.000164345, -0.000450478, 1, 0, 0.5, 0)
material_override = SubResource("ShaderMaterial_qfs1a")
mesh = SubResource("CapsuleMesh_s7aba")
skeleton = NodePath("")

[node name="MeleeWeapon" parent="WobbleEffect/CharacterMesh" instance=ExtResource("8_gkdcr")]
transform = Transform3D(0.999999, 0.000834378, 0.000164365, -0.0008343, 0.999999, -0.000450459, -0.000164721, 0.00045034, 1, -0.000529543, -0.345877, -0.000285811)
detection_radius = 7.0
attack_radius = 4.0
hit_window_start = 0.25
hit_window_end = 0.4

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_7w157")

[node name="EnemyEffects" parent="." instance=ExtResource("5_s7aba")]
flash_duration = 1.0
flash_offset = 12.0
flash_off_color = Color(1, 0, 0, 0)

[node name="HealthCircle" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.15, 0)
material_override = SubResource("ShaderMaterial_r6b7y")
cast_shadow = 0
instance_shader_parameters/health_parm = 1.0
mesh = SubResource("QuadMesh_cou12")
script = ExtResource("6_4ttvg")
